--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,4 +16,4 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug  # 얘는 logger를 통해 로그 찍음.
-    org.hibernate.orm.jdbc.bind: trace
+#    org.hibernate.orm.jdbc.bind: trace
