--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,7 @@ spring:
 #        show_sql: true  # 얘 주석 처리 하는 이유는 얘는 system out으로 로그를 찍음.
         format_sql: true
         default_batch_fetch_size: 100
+#    open-in-view: false
 
 logging:
   level:
